--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
 .App {
   overflow: hidden;
 }
@@ -26,6 +27,9 @@
 
 .right-content {
   background-color: #D1EDE1;
+  height: 999px;
+  display: grid;
+  grid-template-rows: 50% 50%;
 }
 
 .gender {
@@ -38,7 +42,7 @@
   height: 250px;
 }
 
-.box-gender {
+.box-genderm {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,8 +52,22 @@
   border-radius: 50px;
 }
 
-.box-gender:hover {
-  background-color:#028C6A;
+.box-genderfm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  background-color: white;
+  border-radius: 50px;
+}
+
+.box-genderm:hover {
+  background-color: lightseagreen;
+}
+
+.box-genderfm:hover {
+  background-color: palevioletred;
 }
 
 .data-content {
@@ -65,6 +83,7 @@
 }
 
 .input {
+  text-align: center;
   height: 30px;
   font-size: 20px;
   width: 100%;
@@ -98,6 +117,30 @@
 }
 
 .box-button {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.textstatus {
+  color: red;
+  font-size: 18px;
+}
+
+.description {
+  font-weight: bold;
+  font-family: 'Patua One', cursive;
+  text-align: center;
+  font-size: 20px;
+  margin-left: 12%;
+  margin-right: 12%;
+}
+
+.bmi-value {
+  font-weight: bold;
+  font-family: 'Patua One', cursive;
+  font-size: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
