update style and progressbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Itim&display=swap');
 .App {
   overflow: hidden;
 }
@@ -29,7 +29,7 @@
   background-color: #D1EDE1;
   height: 999px;
   display: grid;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 40% 60%;
 }
 
 .gender {
@@ -84,6 +84,7 @@
 
 .input {
   text-align: center;
+  font-family: 'Itim', cursive;
   height: 30px;
   font-size: 20px;
   width: 100%;
@@ -130,18 +131,44 @@
 
 .description {
   font-weight: bold;
-  font-family: 'Patua One', cursive;
-  text-align: center;
-  font-size: 20px;
+  font-family: 'Itim', cursive;
+  font-size: 25px;
   margin-left: 12%;
   margin-right: 12%;
+  text-align: center;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .bmi-value {
+  margin-left: 12%;
+  margin-right: 12%;
   font-weight: bold;
-  font-family: 'Patua One', cursive;
-  font-size: 50px;
+  font-family: 'Itim', cursive;
+  font-size: 55px;
+}
+
+.value-bmi{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.progress-bar {
+  width: 100%;
+  background-color: #aeaeae;
+  border-radius: 50px;
+  height: 40px;
+}
+
+.value-progress-bar {
+  display: block;
+  height: 40px;
+  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  border-radius: 30px;
+}
+
+.cute-img {
+  width: 150px;
+  height: 150px;
 }
