--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,140 @@
 @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Itim&display=swap');
-.App {
-  overflow: hidden;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.box-content {
+  position: relative;
+  background: inherit;
+  background-color: rgba(0, 0, 0, 0.75);
+  border-radius: 5px;
+  width: 600px;
+  height: 900px;
+}
+
+.box-content:after {
+  content: '';
+  width: 600px;
+  height: 900px;
+  background: inherit;
+  position: absolute;
+  bottom: 0;
+  box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.05);
+  filter: blur(10px);
+}
+
+.box {
+  position: relative;
+  z-index: 1;
 }
 
 .App-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #028C6A;
   font-family: 'Bowlby One SC', cursive;
-  font-size: 50px;
+  font-size: 30px;
   color: white;
   height: 80px;
 }
 
 .content {
+  height: 100vh;
+  width: 100vw;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: auto;
 }
 
-.left-content {
-  background-color: #7BC5AE;
-  height: 999px;
+.layout-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-image: url("./assets/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.layout-Modol {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100vh;
+  width: 100vw;
+  z-index: 2;
+}
+
+.Modal {
+  position: absolute;
+  border-radius: 5px;
+  -webkit-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.75);
+  background-color: #d5d6dc;
+  height: 768px;
+  width: 1024px;
+  top: 50%;
+  left: 50%;
+  margin-top: -384px;
+  margin-left: -512px;
+  z-index: 3;
 }
 
 .right-content {
   background-color: #D1EDE1;
-  height: 999px;
+  height: 100%;
   display: grid;
   grid-template-rows: 40% 60%;
 }
 
 .gender {
+  margin-top: 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+}
+
+.continent {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .gender-img {
-  width: 250px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
 }
 
-.box-genderm {
+.map-img {
+  width: 130px;
+  height: 130px;
+}
+
+.box-continent {
+  margin-top: -50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   background-color: white;
-  border-radius: 50px;
+  border-radius: 100px;
+  margin-left: 35px;
+  margin-right: 35px;
 }
 
-.box-genderfm {
+.box-gender {
+  margin-top: -25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
   background-color: white;
-  border-radius: 50px;
-}
-
-.box-genderm:hover {
-  background-color: lightseagreen;
-}
-
-.box-genderfm:hover {
-  background-color: palevioletred;
+  border-radius: 100px;
+  margin-left: 35px;
+  margin-right: 35px;
 }
 
 .data-content {
@@ -78,46 +145,57 @@
 }
 
 .label-input {
-  display: grid;
-  grid-template-columns: 200px 200px 200px;
+  margin-top: 30px;
 }
 
 .input {
   text-align: center;
   font-family: 'Itim', cursive;
-  height: 30px;
-  font-size: 20px;
-  width: 100%;
+  background-color: white;
+  color: #000;
+  height: 50px;
+  font-size: 25px;
+  width: 350px;
+  border-radius: 5px;
+}
+
+input.input {
+  border: 0;
+  opacity: 0.5;
+  border-radius: 5px;
 }
 
 .texts {
   font-size: 30px;
 }
 
-.circle {
-  margin-left: 50px;
-  width: 40px;
-  height: 40px;
-  background-color: #028C6A;
-  color: white;
-  border-radius: 40px;
+.buttonsubmit {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #20B2AA;
+  color: white;
+  width: 350px;
+  height: 50px;
+  border-radius: 5px;
+  opacity: 0.8;
 }
 
-.button {
+.buttonreset {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #028C6A;
+  background-color: #d92d2b;
   color: white;
-  width: 500px;
+  width: 350px;
   height: 50px;
-  border-radius: 50px;
+  border-radius: 5px;
+  opacity: 0.8;
 }
 
 .box-button {
+  margin-top: 25px;
+  color: #000;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -125,8 +203,14 @@
 }
 
 .textstatus {
-  color: red;
-  font-size: 18px;
+  font-style: oblique;
+  text-align: center;
+  font-family: 'Itim', cursive;
+  color: #d92d2b;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 
 .description {
@@ -136,9 +220,6 @@
   margin-left: 12%;
   margin-right: 12%;
   text-align: center;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
 }
 
 .bmi-value {
@@ -149,11 +230,12 @@
   font-size: 55px;
 }
 
-.value-bmi{
+.value-bmi {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .progress-bar {
   width: 100%;
   background-color: #aeaeae;
@@ -164,7 +246,7 @@
 .value-progress-bar {
   display: block;
   height: 40px;
-  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
+  background-image: linear-gradient(to left, green, yellow, orange, red);
   border-radius: 30px;
 }
 
